added new classes

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,11 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-<<<<<<< Updated upstream
-                    <span>C:\Users\dubey\AppData\Local\Temp\testng-eclipse-1642594237\testng-customsuite.xml</span>
-=======
-                    <span>C:\Users\shivam.dubey\AppData\Local\Temp\testng-eclipse--1664307963\testng-customsuite.xml</span>
->>>>>>> Stashed changes
+                    <span>C:\Users\POOJA SINGH\AppData\Local\Temp\testng-eclipse--1678015558\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -108,11 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-<<<<<<< Updated upstream
-                        <a href="#" panel-name="suite-Default_suite" title="tests.Test01_GET" class="method navigator-link" hash-for-method="test01">test01</a> <!-- method navigator-link -->
-=======
-                        <a href="#" panel-name="suite-Default_suite" title="tests.Test02_POST" class="method navigator-link" hash-for-method="test04_patch">test04_patch</a> <!-- method navigator-link -->
->>>>>>> Stashed changes
+                        <a href="#" panel-name="suite-Default_suite" title="tests.Test03_GET" class="method navigator-link" hash-for-method="Test03">Test03</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,24 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-<<<<<<< Updated upstream
-              <span class="class-name">tests.Test01_GET</span>
-=======
-              <span class="class-name">tests.Test02_POST</span>
->>>>>>> Stashed changes
+              <span class="class-name">tests.Test03_GET</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-<<<<<<< Updated upstream
-                  <a name="test01">
-                  </a> <!-- test01 -->
-                  <span class="method-name">test01</span>
-=======
-                  <a name="test04_patch">
-                  </a> <!-- test04_patch -->
-                  <span class="method-name">test04_patch</span>
->>>>>>> Stashed changes
+                  <a name="Test03">
+                  </a> <!-- Test03 -->
+                  <span class="method-name">Test03</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -155,11 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-<<<<<<< Updated upstream
-            <span class="header-content">C:\Users\dubey\AppData\Local\Temp\testng-eclipse-1642594237\testng-customsuite.xml</span>
-=======
-            <span class="header-content">C:\Users\shivam.dubey\AppData\Local\Temp\testng-eclipse--1664307963\testng-customsuite.xml</span>
->>>>>>> Stashed changes
+            <span class="header-content">C:\Users\POOJA SINGH\AppData\Local\Temp\testng-eclipse--1678015558\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,19 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-<<<<<<< Updated upstream
-      &lt;class name=&quot;tests.Test01_GET&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;test01&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tests.Test01_GET --&gt;
-=======
-      &lt;class name=&quot;tests.Test02_POST&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;test04_patch&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- tests.Test02_POST --&gt;
->>>>>>> Stashed changes
+      &lt;class name=&quot;tests.Test03_GET&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -222,15 +188,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-<<<<<<< Updated upstream
-data.setCell(0, 1, 'test01')
-data.setCell(0, 2, 'tests.Test01_GET')
-data.setCell(0, 3, 2451);
-=======
-data.setCell(0, 1, 'test04_patch')
-data.setCell(0, 2, 'tests.Test02_POST')
-data.setCell(0, 3, 2050);
->>>>>>> Stashed changes
+data.setCell(0, 1, 'Test03')
+data.setCell(0, 2, 'tests.Test03_GET')
+data.setCell(0, 3, 2064);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -250,32 +210,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-<<<<<<< Updated upstream
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">tests.Test01_GET</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">test02</span>
-                <br/>
-                <span class="ignored-method-name">test03</span>
-=======
-            <span class="header-content">3 ignored methods</span>
-          </div> <!-- main-panel-header rounded-window-top -->
-          <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">tests.Test02_POST</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">test02_put</span>
-                <br/>
-                <span class="ignored-method-name">test01_post</span>
-                <br/>
-                <span class="ignored-method-name">test03_patch</span>
->>>>>>> Stashed changes
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -284,15 +221,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-<<<<<<< Updated upstream
-              <div class="chronological-class-name">tests.Test01_GET</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.Test03_GET</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">test01</span>
-=======
-              <div class="chronological-class-name">tests.Test02_POST</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">test04_patch</span>
->>>>>>> Stashed changes
+                <span class="method-name">Test03</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
