--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7cdc6d">  <td>22/03/16 16:43:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test01()[pri:0, instance:tests.Test01_GET@5fbdfdcf]">test01</td> 
-  <td>main@1191654595</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>22/03/16 16:43:13</td>   <td>7078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_POST.test01_post()[pri:0, instance:tests.Test02_POST@20ccf40b]">test01_post</td> 
-  <td>main@1191654595</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>22/03/16 16:43:09</td>   <td>3016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test02()[pri:0, instance:tests.Test01_GET@5fbdfdcf]">test02</td> 
-  <td>main@1191654595</td>   <td></td> </tr>
-<tr bgcolor="7cdc6d">  <td>22/03/16 16:43:09</td>   <td>3548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test03()[pri:0, instance:tests.Test01_GET@5fbdfdcf]">test03</td> 
-  <td>main@1191654595</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>22/03/16 16:43:11</td>   <td>5291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_Get.test_01()[pri:0, instance:tests.Test02_Get@2b91004a]">test_01</td> 
-  <td>main@1191654595</td>   <td></td> </tr>
+<tr bgcolor="6e9fae">  <td>22/04/11 21:13:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test01()[pri:0, instance:tests.Test01_GET@4fb3ee4e]">test01</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="d0c991">  <td>22/04/11 21:13:48</td>   <td>8847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_POST.test01_post()[pri:0, instance:tests.Test02_POST@342c38f8]">test01_post</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="6e9fae">  <td>22/04/11 21:13:43</td>   <td>4439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test02()[pri:0, instance:tests.Test01_GET@4fb3ee4e]">test02</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="d0c991">  <td>22/04/11 21:13:48</td>   <td>9577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_POST.test02_put()[pri:0, instance:tests.Test02_POST@342c38f8]">test02_put</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="6e9fae">  <td>22/04/11 21:13:44</td>   <td>5156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test01_GET.test03()[pri:0, instance:tests.Test01_GET@4fb3ee4e]">test03</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="d0c991">  <td>22/04/11 21:13:49</td>   <td>10160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_POST.test03_patch()[pri:0, instance:tests.Test02_POST@342c38f8]">test03_patch</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="d0c991">  <td>22/04/11 21:13:50</td>   <td>10760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_POST.test04_patch()[pri:0, instance:tests.Test02_POST@342c38f8]">test04_patch</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="f0819d">  <td>22/04/11 21:13:46</td>   <td>6972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test02_Get.test_01()[pri:0, instance:tests.Test02_Get@43dac38f]">test_01</td> 
+  <td>main@889891977</td>   <td></td> </tr>
 </table>
